@@ -38,6 +38,8 @@
 #define PORT_NUM 2048
 #endif
 
+#define PORT_NUM_MAX 4096           // The "max" value for ports used in connection manager, although port number in graph manager is dynamic
+
 #define DRIVER_PORT_NUM 256
 
 #ifndef PORT_NUM_FOR_CLIENT
