@@ -82,7 +82,11 @@ struct jackctl_server
     /* uint32_t, clock source type */
     union jackctl_parameter_value clock_source;
     union jackctl_parameter_value default_clock_source;
-
+   
+    /* uint32_t, max port number */
+    union jackctl_parameter_value port_max;
+    union jackctl_parameter_value default_port_max;
+    
     /* bool */
     union jackctl_parameter_value replace_registry;
     union jackctl_parameter_value default_replace_registry;
@@ -741,6 +745,20 @@ EXPORT jackctl_server_t * jackctl_server_create(
     {
         goto fail_free_parameters;
     }
+    
+    value.ui = PORT_NUM;
+    if (jackctl_add_parameter(
+          &server_ptr->parameters,
+          "port-max",
+          "Maximum number of ports.",
+          "",
+          JackParamUInt,
+          &server_ptr->port_max,
+          &server_ptr->default_port_max,
+          value) == NULL)
+    {
+        goto fail_free_parameters;
+    }
 
     value.b = false;
     if (jackctl_add_parameter(
@@ -873,6 +891,7 @@ jackctl_server_start(
         server_ptr->client_timeout.i,
         server_ptr->realtime.b,
         server_ptr->realtime_priority.i,
+        server_ptr->port_max.ui,                                
         server_ptr->verbose.b,
         (jack_timer_type_t)server_ptr->clock_source.ui,
         server_ptr->name.str);
